GH-24: Add ability to generate gRPC stubs